<resources>
    <string name="app_name">SideChefProject</string>
    <string name="createaccount">Create Account</string>
    <string name="snackingtime">Discover New Meals</string>
    <string name="cook">Cooking App</string>
    <string name="d">Dinner</string>
    <string name="oror">" ـــــــــــــــــــــــــــــــــــــــــــــ or ـــــــــــــــــــــــــــــــــــــــــــــ"</string>
    <string name="sign">Sign in</string>
    <string name="remember">Remember Me</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="hint">Search here ...</string>
    <string name="mealname">"Meal Name "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pager">viewpager</string>
    <string name="page">pager1</string>
    <string name="viewpage">viewpagefrag</string>
    <string name="titlefav">favouriteMeal</string>
    <string name="fav">Favourite</string>
    <string name="favorite_icon">fav</string>
    <string name="calendar">Calendar</string>
    <string name="titlecalendar">Calendar</string>
    <string name="schedule_icon">Scheduale</string>
    <string name="continute">Continue as a guest</string>
    <string name="wifi">No Wi-Fi or internet connection</string>
    <string name="con">Continute Offline</string>
</resources>
